docs/tests/typing/bad/testfile-arith-6.cpp

int main() { int *p; char *q; putchar(p-q); }

